Mailpit-deploy-kubernetes/mailpit-deployment-v1.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
   labels: 
     app: mailpit 
   name: mailpit 
spec: 
   replicas: 1 
   selector: 
     matchLabels: 
       app: mailpit 
   template: 
     metadata: 
       labels: 
         app: mailpit 
     spec: 
       containers: 
       - image: axllent/mailpit 
         name: mailpit 
         resources: 
           requests: 
             memory: "64Mi" 
             cpu: "250m" 
           limits: 
             memory: "128Mi" 
             cpu: "500m"
