Mailpit-deploy-kubernetes/mailpit-with-pvc-and-security-context.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
 name: mailpit 
 labels: 
   app: mailpit 
spec: 
 replicas: 1 
 selector: 
   matchLabels: 
     app: mailpit 
 template: 
   metadata: 
     labels: 
       app: mailpit 
   spec: 
     volumes: 
       - name: maildir 
         persistentVolumeClaim: { claimName: pvc-mailpit } 
     containers: 
       - <<: *init-pv 
         name: mailpit 
         securityContext: 
           runAsUser: 1000 
           runAsNonRoot: true 
           readOnlyRootFilesystem: true 
         command: 
           - "./mailpit" 
           - "--db-file=/maildir/mailpit.db"
